--- a/pycode.qmd
+++ b/pycode.qmd
@@ -4,19 +4,26 @@ title-size: small
 format: html
 execute:
   echo: false
+  cache: true
+  freeze: auto
 ---
 
 
 ```{python}
 #---------------------------------------------------------------------------------------------------------------------------
-# preliminaries: loading relevant libraries; importing and subsetting data for analysis
+# preliminaries: load relevant libraries; import data; define colour palette
 #---------------------------------------------------------------------------------------------------------------------------
 # load libraries
+import brewer2mpl
 import pandas as pd
+from nltk.tokenize import sent_tokenize
 from sklearn.model_selection import train_test_split
 import re
 import numpy as np
 import nltk
+import tensorflow as tf
+import random
+import os
 from nltk.corpus import stopwords
 from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer
 from gensim.models import Word2Vec
@@ -32,21 +39,82 @@ from tensorflow.keras.utils import to_categorical
 from kerastuner.tuners import RandomSearch
 from tensorflow.keras.layers import LSTM, SpatialDropout1D
 
+# set seeds for reproducibility purposes
+np.random.seed(5)
+tf.random.set_seed(5)
+random.seed(5)
+os.environ['PYTHONHASHSEED'] = str(5)
+
 # import data 
 data = pd.read_csv("sona.csv")
-data['cleaned_speech'] = data['speech'].apply(lambda text: re.sub(r'[^A-Za-z\s]', '', text).lower())
 
-# select subset of four out of six presidents 
-unique_presidents = data['president'].unique()
-subset = data[~data['president'].isin(['Motlanthe', 'deKlerk'])]
+# Generate the RdGy colour palette
+# num_colors = 11
+# rdgy_palette = brewer2mpl.get_map('RdGy', 'Sequential', num_colors, reverse=True).mpl_colors
 
-# filtering data to remove stop words and only words with a length of three characters or more 
+#---------------------------------------------------------------------------------------------------------------------------
+```
+
+
+```{python}
+#---------------------------------------------------------------------------------------------------------------------------
+# data pre-processing: prepare data  ~ subsettting by presidents, cleaning, and segmenting speeches into sentences
+#---------------------------------------------------------------------------------------------------------------------------
+
+import pandas as pd
+import nltk
+from nltk.tokenize import sent_tokenize
+from nltk.corpus import stopwords
+import re
+
+# Assuming `data` is your original DataFrame
+# Select subset of four out of six presidents
+subset = data[data['president'].isin(['Mandela', 'Mbeki', 'Zuma', 'Ramaphosa'])]
+
+# Initialize a list to store the sentences
+sentences_data = []
+
+# Iterate through each row in the subset
+for index, row in subset.iterrows():
+    # Split the speech into sentences
+    speech_sentences = sent_tokenize(row['speech'])
+    
+    # For each sentence, create a new row with the same information
+    for sentence in speech_sentences:
+        sentences_data.append({
+            'sentence': sentence,
+            'year': row['year'],
+            'president': row['president'],
+            'date': row['date']
+        })
+
+# Create a new DataFrame with sentences
+sona_sentences = pd.DataFrame(sentences_data)
+
+# Filtering function to remove stop words and only words with a length of three characters or more
 english_words = set(nltk.corpus.words.words())
 stop_words = set(stopwords.words('english'))
-# create a copy of the subset to avoid SettingWithCopyWarning
-subset = subset[subset['president'].isin(unique_presidents)].copy()
-subset['filtered_speech'] = subset['cleaned_speech'].apply(lambda text: ' '.join([word for word in text.split() if word not in stop_words and len(word) > 3 and word in english_words]))
+
+def filter_text(text):
+    return ' '.join([word for word in text.split() if word not in stop_words and len(word) > 3 and word in english_words])
+
+# Apply the filter function to the cleaned sentences
+sona_sentences['cleaned_sentence'] = sona_sentences['sentence'].apply(filter_text)
+
+# Clean sentences
+sona_sentences['cleaned_sentence'] = sona_sentences['cleaned_sentence'].apply(lambda text: re.sub(r'[^A-Za-z\s]', '', text).lower())
+
+# Output the number of rows
+sona_sentences.shape
+
 #---------------------------------------------------------------------------------------------------------------------------
+```
+
+
+```{python}
+
+sona_sentences.head()
+
 ```
 
 
@@ -56,16 +124,16 @@ subset['filtered_speech'] = subset['cleaned_speech'].apply(lambda text: ' '.join
 #---------------------------------------------------------------------------------------------------------------------------
 # create BoW ~ using top 150 words
 bow_vectorizer = CountVectorizer(max_features=150)
-bow_features = bow_vectorizer.fit_transform(subset['filtered_speech']).toarray()
-
+bow_features = bow_vectorizer.fit_transform(sona_sentences['cleaned_sentence']).toarray()
+bow_features.shape
 # create tf-idf ~ using 150 words 
 tfidf_vectorizer = TfidfVectorizer(max_features=150)
-tfidf_features = tfidf_vectorizer.fit_transform(subset['filtered_speech']).toarray()
+tfidf_features = tfidf_vectorizer.fit_transform(sona_sentences['cleaned_sentence']).toarray()
 
 # create embeddings
-tokenized_speeches = [text.split() for text in subset['filtered_speech']]
+tokenized_speeches = [text.split() for text in sona_sentences['cleaned_sentence']]
 model = Word2Vec(sentences=tokenized_speeches, vector_size=150, window=5, min_count=1, workers=4)
-embeddings_features = np.array([np.mean([model.wv[word] for word in text.split() if word in model.wv] or [np.zeros(150)], axis=0) for text in subset['filtered_speech']])
+embeddings_features = np.array([np.mean([model.wv[word] for word in text.split() if word in model.wv] or [np.zeros(150)], axis=0) for text in sona_sentences['cleaned_sentence']])
 #---------------------------------------------------------------------------------------------------------------------------
 ```
 
@@ -77,7 +145,7 @@ embeddings_features = np.array([np.mean([model.wv[word] for word in text.split()
 seed = 5
 
 # create data split for BoW approach
-labels = subset['president']
+labels = sona_sentences['president']
 X_train_bow, X_temp_bow, y_train, y_temp = train_test_split(bow_features, labels, test_size=0.4, random_state=seed, stratify=labels)
 X_val_bow, X_test_bow, y_val, y_test = train_test_split(X_temp_bow, y_temp, test_size=0.5, random_state=seed, stratify=y_temp)
 
